--- a/app/views/menus/index.html.slim
+++ b/app/views/menus/index.html.slim
@@ -1,5 +1,5 @@
 - content_for :site_nav_right do
-  = link_to 'History', wcms_components_changes_path(klass: 'menus'), class: "top-nav-link"
+  = link_to 'History', wcms_components_changes_path(klass: 'Menu'), class: "top-nav-link"
 .container.page
   .page-header
     .pull-right
