--- a/app/views/sites/index.html.slim
+++ b/app/views/sites/index.html.slim
@@ -1,5 +1,5 @@
 - content_for :site_nav_right do
-  = link_to 'History', wcms_components_changes_path(klass: 'sites'), class: "top-nav-link"
+  = link_to 'History', wcms_components_changes_path(klass: 'Site'), class: "top-nav-link"
 
 .container.page
   .page-header
