--- a/app/views/important_dates/index.html.slim
+++ b/app/views/important_dates/index.html.slim
@@ -1,5 +1,5 @@
 - content_for :site_nav_right do
-  = link_to 'History', wcms_components_changes_path(klass: 'important_dates'), class: "top-nav-link"
+  = link_to 'History', wcms_components_changes_path(klass: 'ImportantDate'), class: "top-nav-link"
 .container.page
   .page-header
     .pull-right
@@ -39,4 +39,3 @@
     = render 'important_dates'
 
   .text-center = paginate @important_dates
-
