--- a/app/assets/stylesheets/components/_page_navigator.scss
+++ b/app/assets/stylesheets/components/_page_navigator.scss
@@ -5,4 +5,10 @@
   .sortSelect {cursor:pointer}
   .sortSelect.asc:after { content: "▼"; padding-left: 5px; }
   .sortSelect.desc:after { content: "▲"; padding-left: 5px; }
+  h3.site-select {cursor: pointer; display: inline-block; margin: 0;}
+  .bottom-margin { margin-bottom: 20px; }
+  .input-group-search { width: calc(100% - 100px);
+    button { border-radius: 0 4px 4px 0; }
+    button:focus { outline: none; }
+  }
 }
