Adding links to the photo galleries index

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,6 +26,7 @@ html lang="en-us"
         {body: 'Media', url: :media_path},
         {body: 'Menus', url: :menus_path},
         {body: 'Pages', url: :page_editions_path},
+        {body: 'Photo Galleries', url: :photo_galleries_path},
         {body: 'Service Links', url: :service_links_path},
         {body: 'Sites', url: :sites_path},
       ], site_name: 'WCMS'})
