Moving presentation data templates into wcms publisher.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,6 +22,7 @@ html lang="en-us"
       = wcms_component('navigation/site_nav', { menu: [ \
         {body: 'Calendars', url: :calendars_path},
         {body: 'Campus Locations', url: :campus_locations_path},
+        {body: 'Data Templates', url: :presentation_data_templates_path},
         {body: 'Important Dates', url: :important_dates_path},
         {body: 'Media', url: :media_path},
         {body: 'Menus', url: :menus_path},
