--- a/app/views/presentation_data_templates/edit.html.slim
+++ b/app/views/presentation_data_templates/edit.html.slim
@@ -1,1 +1,16 @@
-.container.page = render 'form'
+.container.page
+  .row
+    .col-sm-3
+      = render 'menu'
+
+    .col-sm-9
+      / validate that current user can manage the page
+      - if policy(@presentation_data_template).can_manage?(params[:page])
+        .edit-partials
+        - case params[:page]
+        - when 'logs'
+          = render 'shared/logs', obj: @presentation_data_template
+        - else
+          = render form_page_path
+      - else
+        .alert.alert-danger You do not have permission to manage this view. #{link_to('Back to overview', edit_presentation_data_template_path(@presentation_data_template))}
