--- a/app/views/presentation_data_templates/edit_partials/_form.html.slim
+++ b/app/views/presentation_data_templates/edit_partials/_form.html.slim
@@ -1,6 +1,6 @@
 = form_for @presentation_data_template do |f|
   - if @presentation_data_template.new_record?
-    h2 = new_or_edit_action @presentation_data_template
+    h2 New Presentation Data Template
 
   .form-section
     .form-group
