Moving users into WCMS

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,6 +33,7 @@ html lang="en-us"
       ], site_name: 'WCMS'})
 
       = wcms_component('alerts/message_list')
+      = wcms_component('alerts/impersonation')
 
       = yield
 
