Migrating events from news-publisher to wcms

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 // External resources
 @import "biola-frontend-toolkit";  // biola specific mixins, settins, and stylesheets
 @import "biola-wcms-components";
+@import "bootstrap-upload";
+@import "jquery.Jcrop";
+@import "bootstrap-multiselect";
 
 // Settings and configuration
 
