--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,5 +1,41 @@
 - content_for :site_nav_right do
-  = link_to 'History', wcms_components_changes_path(klass: 'PageEdition'), class: "top-nav-link"
+  = link_to 'History', wcms_components_changes_path(klass: 'Event'), class: "top-nav-link"
+
 .container.page
-  #event-react-component
-  / = react_component('App.routes.EventRoute', {sites: @sites})
+  .page-header
+    ul.nav.nav-pills.pull-left
+      = nav_pill_header 'Options'
+      = nav_pill_dropdown 'Status', :status do
+        = nav_list_link 'Draft', :status, 'draft'
+        = nav_list_link 'Up for Review', :status, 'request_review'
+        = nav_list_link 'Published', :status, 'published'
+        = nav_list_link 'Archived', :status, 'archived'
+      - if @available_sites.present?
+        = nav_pill_dropdown 'Sites', :site do
+          - @available_sites.each do |site|
+            = nav_list_link site.title, :site, site.id
+      - if @available_departments.present?
+        = nav_pill_dropdown 'Department', :department do
+          - @available_departments.each do |dept|
+            = nav_list_link dept, :department, dept.id
+      - if @request_review_count > 0
+        = nav_pill_link "#{@request_review_count} events need publishing", :request_review
+
+    .pull-right
+      = form_tag events_path, method: :get do
+        = text_field_tag 'q', params[:q], class: 'form-control', placeholder: 'Search', tabindex: '1'
+    .pull-right.pad-right
+      - if policy(Event).create?
+        = link_to 'New Event', new_event_path, class: 'btn btn-default'
+    .pull-right.pad-right
+      - if policy(Event).update_from_ws?
+        = link_to 'Sync with Web Services', update_from_ws_events_path, class: 'btn btn-info', method: :post
+    .clearfix
+
+  - if @events.empty?
+    .alert.alert-warning
+      = fa_icon 'warning', text: "No events were found"
+  - else
+    = render 'events'
+
+    .text-center = paginate @events
