--- a/app/views/events/edit_partials/_form.html.slim
+++ b/app/views/events/edit_partials/_form.html.slim
@@ -5,7 +5,7 @@
       strong Basic Info
     .panel-body
       .row.form-section
-        .col-md-6
+        .col-md-12
           .form-group
             = f.label :title
             = f.text_field :title, class: 'form-control', title: @event.title
@@ -19,36 +19,8 @@
             .pull-right.text-muted = '(Auto Generated if Blank)'
             = f.text_field :slug, class: 'form-control'
 
-          .form-group
-            = label_tag 'event[department_ids]', 'Departments'
-            br
-            - if permission_to_edit?(@event, :department_ids)
-              = wcms_component "forms/multiselect",
-                form: f,
-                attribute: :department_ids,
-                collection: Department.published.asc(:title),
-                value_method: :id,
-                text_method: :title,
-                multiple: true
-            - else
-              .well.well-faux-input
-                = @event.departments.try(:join, ', ')
 
-          .form-group
-            = label_tag 'event[group_ids]', 'Groups'
-            br
-            - if permission_to_edit?(@event, :group_ids)
-              = wcms_component "forms/multiselect",
-                form: f,
-                attribute: :group_ids,
-                collection: Group.published.asc(:title),
-                value_method: :id,
-                text_method: :title,
-                multiple: true
-            - else
-              .well.well-faux-input
-                = @event.groups.try(:join, ', ')
-
+        .col-md-12
           .form-group
             = f.label :description
             - if permission_to_edit?(@event, :description)
@@ -56,77 +28,17 @@
             - else
               .well.well-faux-input
                 = @event.description.html_safe
-        .col-md-6
-          .form-group
-            = f.label :ws_source, 'Source'
-            = f.text_field :ws_source, class: 'form-control', disabled: true
+      hr
 
+      h3 Times
+      .row.form-section
+        .col-md-12
           .form-group
             = f.label :start_date
             = f.text_field :start_date, value: @event.start_date.try(:to_formatted_s, :long_ordinal), class: 'form-control chronic_ping'
           .form-group
             = f.label :end_date
             = f.text_field :end_date, value: @event.end_date.try(:to_formatted_s, :long_ordinal), class: 'form-control chronic_ping'
-
-          .form-group
-            = label_tag 'event[external_sponsor_ids]', 'External Sponsor'
-            br
-            - if permission_to_edit?(@event, :external_sponsor_ids)
-              = wcms_component "forms/multiselect",
-                form: f,
-                attribute: :external_sponsor_ids,
-                collection: Organization.asc(:title),
-                value_method: :id,
-                text_method: :title,
-                multiple: true
-
-            - else
-              .well.well-faux-input
-                = @event.external_sponsors.try(:join, ', ')
-
-          .row
-            .form-group.col-sm-6.col-xs-12.form-site
-              = label_tag 'event[site_id]', 'Site'
-              br
-              - if permission_to_edit?(@event, :site_id)
-                = select_tag 'event[site_id]', options_for_select(@sites.with_events_enabled.map{|site| [site.title, site.id] }, @event.site_id), include_blank: true, class: "form-control site_multiselect"
-              - else
-                .well.well-faux-input
-                  = @event.site
-                = hidden_field_tag :disabled_site_id, @event.site_id.to_s
-
-            .form-group.col-sm-6.col-xs-12.form-categories
-              = f.label :categories
-              br
-              - if permission_to_edit?(@event, :site_category_ids)
-                .multi_category_select
-                  = select_tag 'event[site_category_ids]', options_for_select([], @event.site_category_ids), multiple: true, class: "multiselect"
-              - else
-                .well.well-faux-input
-                  = @event.site_categories.join(', ')
-
-          .row
-            .form-group.col-sm-6.col-xs-12
-              = label_tag 'event[audience]', 'Audience'
-              br
-              - if permission_to_edit?(@event, :audience)
-                = wcms_component "forms/multiselect",
-                  form: f,
-                  attribute: :audience,
-                  collection: Settings.audience,
-                  value_method: :to_s,
-                  text_method: :to_s,
-                  multiple: true
-              - else
-                .well.well-faux-input
-                  = @event.audience.try(:join, ', ')
-
-            .form-group.col-sm-6.col-xs-12
-              label Event type
-              .checkbox
-                label
-                  =' f.check_box :paid
-                  | Paid
 
       hr
 
@@ -176,7 +88,7 @@
               = f.text_field :custom_campus_location, class: 'form-control', placeholder: 'e.g. Library Upper Level Balcony'
         #off_campus
           .col-md-12
-            = f.fields_for :address, @event.address do |address|
+            = f.fields_for :address, (@event.address || Address.new) do |address|
               .col-md-8
                 .form-group
                   = address.label :line1, 'Venue Name'
@@ -202,6 +114,114 @@
         = render 'shared/image_crop', f: f, object: @event
       hr
 
+      h3 Publishing Details
+      .row.form-section
+        .col-md-6
+          .form-group
+            = label_tag 'event[department_ids]', 'Departments'
+            br
+            - if permission_to_edit?(@event, :department_ids)
+              = wcms_component "forms/multiselect",
+                form: f,
+                attribute: :department_ids,
+                collection: Department.published.asc(:title),
+                value_method: :id,
+                text_method: :title,
+                multiple: true
+            - else
+              .well.well-faux-input
+                = @event.departments.try(:join, ', ')
+
+          .form-group
+            = label_tag 'event[group_ids]', 'Groups'
+            br
+            - if permission_to_edit?(@event, :group_ids)
+              = wcms_component "forms/multiselect",
+                form: f,
+                attribute: :group_ids,
+                collection: Group.published.asc(:title),
+                value_method: :id,
+                text_method: :title,
+                multiple: true
+            - else
+              .well.well-faux-input
+                = @event.groups.try(:join, ', ')
+
+          .form-group
+            = label_tag 'event[external_sponsor_ids]', 'External Sponsor'
+            br
+            - if permission_to_edit?(@event, :external_sponsor_ids)
+              = wcms_component "forms/multiselect",
+                form: f,
+                attribute: :external_sponsor_ids,
+                collection: Organization.asc(:title),
+                value_method: :id,
+                text_method: :title,
+                multiple: true
+
+            - else
+              .well.well-faux-input
+                = @event.external_sponsors.try(:join, ', ')
+
+        .col-md-6
+          .form-group
+            = f.label :ws_source, 'Source'
+            = f.text_field :ws_source, class: 'form-control', disabled: true
+
+          .row
+            .form-group.col-sm-6.col-xs-12.form-site
+              = label_tag 'event[site_id]', 'Site'
+              br
+              - if permission_to_edit?(@event, :site_id)
+                = select_tag 'event[site_id]', options_for_select(@sites.with_events_enabled.map{|site| [site.title, site.id] }, @event.site_id), include_blank: true, class: "form-control site_multiselect"
+              - else
+                .well.well-faux-input
+                  = @event.site
+                = hidden_field_tag :disabled_site_id, @event.site_id.to_s
+
+            .form-group.col-sm-6.col-xs-12.form-categories
+              = f.label :categories
+              br
+              - if permission_to_edit?(@event, :site_category_ids)
+                .multi_category_select
+                  = select_tag 'event[site_category_ids]', options_for_select([], @event.site_category_ids), multiple: true, class: "multiselect"
+              - else
+                .well.well-faux-input
+                  = @event.site_categories.join(', ')
+
+          .row
+            .form-group.col-sm-6.col-xs-12
+              = label_tag 'event[audience]', 'Audience'
+              br
+              - if permission_to_edit?(@event, :audience)
+                = wcms_component "forms/multiselect",
+                  form: f,
+                  attribute: :audience,
+                  collection: Settings.audience,
+                  value_method: :to_s,
+                  text_method: :to_s,
+                  multiple: true
+              - else
+                .well.well-faux-input
+                  = @event.audience.try(:join, ', ')
+
+            .form-group.col-sm-6.col-xs-12
+              label Featured
+              .checkbox
+                label
+                  =' f.check_box :featured
+                  | Featured
+
+          .form-group.pull-right.pad-right
+            .checkbox style="margin-top: 7px;"
+              label
+                =' f.check_box :featured
+                | Yes Featured
+
+
+
+      hr
+
       - if policy(@event).publish?
         h3 Status
         .row.form-section
@@ -225,9 +245,4 @@
           - if @event.request_review? && policy(@event).publish?
             .form-group.pull-right.pad-right
               = f.submit 'Return to Draft', class: 'btn btn-biola'
-          .form-group.pull-right.pad-right
-            .checkbox style="margin-top: 7px;"
-              label
-                =' f.check_box :featured
-                | Featured
 
