Adding support for EventOccurrence Now you can add multiple occurrences to an event DEV-297 Using date picker for time fields instead of chronic DEV-591 Overwriting date_select and datetime_select to use new date picker

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "bootstrap-upload";
 @import "jquery.Jcrop";
 @import "bootstrap-multiselect";
+@import "bootstrap-datetimepicker";
 
 // Settings and configuration
 
