--- a/app/views/events/_menu.html.slim
+++ b/app/views/events/_menu.html.slim
@@ -3,8 +3,9 @@
     .list-group-item.top-item
       = @event
     = menu_block(class: 'list-group-item') do |menu|
-      = menu.add_item('Event', default: true) { edit_event_path(@event, page: 'event') }
-      = menu.add_item('Tickets') { edit_event_path(@event, page: 'tickets') } if @event.paid?
+      = menu.add_item('Overview', default: true) { edit_event_path(@event, page: 'form') }
+      = menu.add_item('Tickets / Registration') { edit_event_path(@event, page: 'tickets') }
+      = menu.add_item('Multiple Occurrences') { edit_event_path(@event, page: 'occurrences') }
       = menu.add_item('Links') { edit_event_path(@event, page: 'links') }
       = menu.add_item('Relationships') { edit_event_path(@event, page: 'relationships') }
       = menu.add_item('Presentation Data') { edit_event_path(@event, page: 'presentation_data') }
