--- a/app/views/events/new.html.slim
+++ b/app/views/events/new.html.slim
@@ -1,3 +1,3 @@
 .container.page
   h2.title New event
-  .profile-pages = render 'events/pages/event'
+  .profile-pages = render 'events/edit_partials/form'
