--- a/app/views/events/edit.html.slim
+++ b/app/views/events/edit.html.slim
@@ -6,11 +6,6 @@
     .col-sm-9
       / validate that current user can manage the page
       - if policy(@event).can_manage?(params[:page])
-        .edit-partials
-        - case params[:page]
-        - when 'logs'
-          = render 'shared/logs', obj: @event
-        - else
-          = render form_page_path
+        .edit-partials = render form_page_path
       - else
         .alert.alert-danger You do not have permission to manage this view. #{link_to('Back to overview', edit_event_path(@event))}
