--- a/app/views/media/edit.html.slim
+++ b/app/views/media/edit.html.slim
@@ -6,11 +6,6 @@
     .col-sm-9
       / validate that current user can manage the page
       - if policy(@medium).can_manage?(params[:page])
-        .edit-partials
-        - case params[:page]
-        - when 'logs'
-          = render 'shared/logs', obj: @medium
-        - else
-          = render form_page_path
+        .edit-partials = render form_page_path
       - else
         .alert.alert-danger You do not have permission to manage this view. #{link_to('Back to overview', edit_medium_path(@medium))}
