Improving the way you create a page with source

--- a/app/views/event_collections/edit_partials/_pages.html.slim
+++ b/app/views/event_collections/edit_partials/_pages.html.slim
@@ -1,19 +1,1 @@
-.panel.panel-default
-  .panel-heading
-    strong Pages
-  .panel-body
-    table.table
-      - if @event_collection.page_editions.present?
-        - @event_collection.page_editions.each do |page|
-          tr
-            td = link_to page, page
-            td
-              - if page.id.to_s == @event_collection.primary_page_id
-                = "Primary"
-              - else
-                = button_to "Make Primary", @event_collection, {method: :patch, params: {"event_collection[primary_page_id]" => page.id.to_s, page: 'pages'}, class: 'btn btn-default'}
-
-      - else
-        .alert.alert-info This collection has no pages tied to it.
-
-= link_to 'Create page for this event collection', new_page_edition_path(source_type: 'event_collection', source_id: @event_collection.id.to_s), class: 'btn btn-default'
+= render 'shared/source_pages', source: @event_collection
