--- a/app/views/events/edit_partials/_pages.html.slim
+++ b/app/views/events/edit_partials/_pages.html.slim
@@ -1,19 +1,1 @@
-.panel.panel-default
-  .panel-heading
-    strong Pages
-  .panel-body
-    table.table
-      - if @event.page_editions.present?
-        - @event.page_editions.each do |page|
-          tr
-            td = link_to page, page
-            td
-              - if page.id.to_s == @event.primary_page_id
-                = "Primary"
-              - else
-                = button_to "Make Primary", @event, {method: :patch, params: {"event[primary_page_id]" => page.id.to_s, page: 'pages'}, class: 'btn btn-default'}
-
-      - else
-        .alert.alert-info This event has no pages tied to it.
-
-= link_to 'Create page for this event', new_page_edition_path(source_type: 'event', source_id: @event.id.to_s), class: 'btn btn-default'
+= render 'shared/source_pages', source: @event
