--- a/app/views/events/_events.html.slim
+++ b/app/views/events/_events.html.slim
@@ -3,20 +3,17 @@
     thead
       tr
         th Title
-        th Location
-        th Date
-        th Published On
+        th First Date
+        th #
         th
         th Status
     tbody
       - @events.each do |event|
+        - occurrence_count = event.event_occurrences.count
         tr
           td = link_to event.title, event
-          td = event.location.to_s
-          td
-            =' event.start_date ? "#{event.start_date.to_formatted_s(:long_ordinal)}" : ""
-            = event.end_date ? "to #{event.end_date.try(:to_formatted_s, :long_ordinal)}" : ""
-          td = event.publish_at.try(:to_formatted_s, :long_ordinal)
+          td = event.event_occurrences.first.start_time.to_formatted_s(:long_ordinal)
+          td = event.event_occurrences.count
           td = content_tag :span, "Imported", class: "label label-default", title: event.ws_source if event.imported
           td = status_for event
 
